Added post request for each month
Now each month makes the same post request when clicked on the front end. Also added ids for the orders in the html for the modifications in the post request.

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -65,9 +65,9 @@
     
 
     <ul>
-        <li>11 cherry</li>
-        <li>17 chocolate</li>
-        <li>31 plain</li>
+        <li id="order1">11 cherry</li>
+        <li id="order2">17 chocolate</li>
+        <li id="order3">31 plain</li>
     </ul>
 
     </body>
